# hdoc

./: .clang-format  .gitignore  .hdoc.toml  README.md  flake.nix  meson.build
assets/: search.js
index-tests/: common.cpp  common.hpp  test-comments-enums.cpp  test-comments-functions.cpp  test-comments-namespaces.cpp  test-comments-records.cpp  test-constructors.cpp  test-enums.cpp  test-functions.cpp  test-inheritance.cpp  test-namespaces.cpp  test-operators.cpp  test-records.cpp  test-templates.cpp  test-typedefs.cpp  test-unions.cpp  test.cpp
schemas/: hdoc-payload-schema.json
site/: config.toml
site/content/: oss.md  pricing.md  privacy-policy.md  release-notes.md  terms-of-service.md
site/content/docs/: _index.md
site/content/docs/features/: _index.md  api-docs.md  excluding-code.md  markdown-pages.md  search.md
site/content/docs/intro/: _index.md  getting-started.md  troubleshooting.md
site/content/docs/reference/: _index.md  config-file-reference.md
site/static/: styles.css
site/templates/: 404.html  content-page.html  doc-page.html  doc-section.html  index.html  pricing.html
site/templates/macros/: nav.html
src/: client-main.cpp  hdoc-online-main.cpp  main.cpp  version.hpp
src/frontend/: Frontend.cpp  Frontend.hpp
src/indexer/: Indexer.cpp  Indexer.hpp  MatcherUtils.cpp  MatcherUtils.hpp  Matchers.cpp  Matchers.hpp
src/serde/: CppReferenceURLs.hpp  HTMLWriter.cpp  HTMLWriter.hpp  JSONDeserializer.cpp  JSONDeserializer.hpp  JSONSerializer.hpp  SerdeUtils.cpp  SerdeUtils.hpp  Serialization.cpp  Serialization.hpp
src/support/: MarkdownConverter.cpp  MarkdownConverter.hpp  ParallelExecutor.cpp  ParallelExecutor.hpp  StringUtils.cpp  StringUtils.hpp
src/types/: Config.hpp  Index.hpp  SerializedMarkdownFile.hpp  Symbols.hpp
subprojects/: argparse.wrap  cmark-gfm.wrap  cpp-httplib.wrap  rapidjson.wrap  tomlplusplus.wrap
subprojects/argparse/: argparse.hpp  meson.build
subprojects/cereal/: meson.build
subprojects/cereal/include/cereal/: cereal.hpp
subprojects/cereal/include/cereal/details/: traits.hpp
subprojects/cmark/: meson.build
subprojects/cmark-gfm/: meson.build
subprojects/cmark-gfm/src/: cmark-gfm_export.h
subprojects/cpp-httplib/: meson.build
subprojects/ctml/: ctml.hpp  meson.build
subprojects/doctest/: doctest.hpp  meson.build
subprojects/packagefiles/rapidjson/: meson.build
subprojects/rapidjson/: meson.build
subprojects/spdlog/: meson.build
subprojects/tiny-process-library/: meson.build  process_unix.cpp  process_win.cpp
subprojects/toml++/: meson.build  toml.hpp
tests/: TestUtils.cpp  TestUtils.hpp  clone_test_repos.sh  hdoc-tests-main.cpp  test.sh
tests/index-tests/: common.cpp  common.hpp  test-comments-enums.cpp  test-comments-functions.cpp  test-comments-namespaces.cpp  test-comments-records.cpp  test-comments-templates.cpp  test-constructors.cpp  test-enums.cpp  test-functions.cpp  test-inheritance.cpp  test-namespaces.cpp  test-operators.cpp  test-records.cpp  test-templates.cpp  test-typedefs.cpp  test-unions.cpp
tests/integration-tests/: clone-corpus-repos.sh  test.sh  test_ci.sh
tests/integration-tests/corpus-tomls/: dlib.hdoc.toml  doxygen-demo.hdoc.toml  draco.hdoc.toml  ezy.hdoc.toml  flecs.hdoc.toml  json.hdoc.toml  marl.hdoc.toml  oatpp.hdoc.toml  oboe.hdoc.toml  subspace.hdoc.toml  utfcpp.hdoc.toml
tests/integration-tests/tomls/: dlib.toml
tests/json-tests/: json-tests-enums.cpp  json-tests-functions.cpp  json-tests-namespaces.cpp  json-tests-records.cpp  json-tests-schema-validation.cpp
tests/tomls/: crow.toml  doxygen-demo.toml  mio.toml
tests/unit-tests/: getBareTypeTestCases.hpp  test.cpp
